--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
+    "react-spring": "^8.0.27",
     "react-three-fiber": "^2.4.3",
     "three": "^0.108.0",
     "three.meshline": "^1.2.0"
